04a-nsg-rules.tf
locals { 
nsgrules = {
   
    ssh = {
      name                       = "ssh"
      priority                   = 100
      direction                  = "Inbound"
      access                     = "Allow"
      protocol                   = "Tcp"
      source_port_range          = "*"
      destination_port_range    = "22"
      source_address_prefix      = "*"
      destination_address_prefix = "*"
    }
 
    http = {
      name                       = "http"
      priority                   = 101
      direction                  = "Inbound"
      access                     = "Allow"
      protocol                   = "Tcp"
      source_port_range          = "*"
      destination_port_range     = "80"
      source_address_prefix      = "*"
      destination_address_prefix = "*"
    }
 
    https = {
      name                       = "https"
      priority                   = 201
      direction                  = "Inbound"
      access                     = "Allow"
      protocol                   = "Tcp"
      source_port_range          = "*"
      destination_port_range     = "443"
      source_address_prefix      = "*"
      destination_address_prefix = "*"
    }
  } 
}

resource "azurerm_network_security_group" "nsg_gitlab" {
  name                = "nsg_gitlab"
  location            = azurerm_resource_group.rg_gitlab.location
  resource_group_name = azurerm_resource_group.rg_gitlab.name
}
 
resource "azurerm_network_security_rule" "nsg_rule" {
  for_each                    = local.nsgrules 
  name                        = each.key
  direction                   = each.value.direction
  access                      = each.value.access
  priority                    = each.value.priority
  protocol                    = each.value.protocol
  source_port_range           = each.value.source_port_range
  destination_port_range      = each.value.destination_port_range
  source_address_prefix       = each.value.source_address_prefix
  destination_address_prefix  = each.value.destination_address_prefix
  resource_group_name         = azurerm_resource_group.rg_gitlab.name
  network_security_group_name = azurerm_network_security_group.nsg_gitlab.name
}
